# ticktime-rs

./: Cargo.toml  README.md
examples/: custom.rs  event.rs  lunar_earthlike.rs  real_earthlike.rs
src/: event.rs  lib.rs  lib_tests.rs
