[package]
name = "ticktime"
version = "0.0.2"
authors = ["grzi <jeremy.thulliez@gmail.com>"]
description = "Provides a ticktime struct to convert a tick to an in game date time"
documentation = "https://docs.rs/ticktime"
keywords = ["game", "time", "date"]
repository = "https://github.com/grzi/ticktime-rs/"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]